tests/baselines/reference/genericTypeAssertions5.errors.txt
==== tests/cases/compiler/genericTypeAssertions5.ts (5 errors) ====
    interface A {
        foo(): string;
    }
    
    interface B extends A {
        bar(): number;
    }
    
    interface C extends A {
        baz(): number;
    }
    
    var a: A;
    var b: B;
    var c: C;
    
    function foo2<T extends A>(x: T) {
        var y = x;
        y = a; // error: cannot convert A to T
        ~
!!! Type 'A' is not assignable to type 'T'.
        y = b; // error: cannot convert B to T
        ~
!!! Type 'B' is not assignable to type 'T'.
        y = c; // error: cannot convert C to T
        ~
!!! Type 'C' is not assignable to type 'T'.
        y = <T>a;
        y = <T>b; // error: cannot convert B to T
            ~~~~
!!! Neither type 'B' nor type 'T' is assignable to the other.
        y = <T>c; // error: cannot convert C to T
            ~~~~
!!! Neither type 'C' nor type 'T' is assignable to the other.
    }